<resources>
    <string name="app_name">planetze</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="log_out">Log Out</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_instead">Have an account? Log in instead.</string>
    <string name="sign_up_here">Don\'t have an account? Sign up here.</string>
    <string name="reset_password">Forgot password? Reset here</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="send_email">Send email</string>
    <string name="go_back_to_login">Go back to login</string>
    <string name="enter_in_your_email_and_we_will_send_a_password_reset_email"> Enter in your email and we will send a password reset email
    </string>
    <string name="select_an_option">Select an option</string>
    <string name="submit">Submit</string>
    <string name="enter_an_activity_to_record">Enter an activity to record.</string>
    <string name="dailyemission"> 0 </string>
    <string name="date">Select Date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eco_tracker">Eco Tracker</string>
    <string name="habit">Habit</string>
    <string name="add_activity">Add Activity</string>
    <string name="eco_gauge">Eco Gauge</string>
    <string name="eco_hub">Eco Hub</string>

    <!-- Habit Categories -->
    <string-array name="categories">
        <item>All</item>
        <item>Transportation</item>
        <item>Food</item>
        <item>Energy</item>
        <item>Waste Management</item>
        <item>Recycling</item>
    </string-array>
    <string name="content_description_image">Image representing the resource</string>
</resources>
