<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reset_password_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textColor="@color/teal_700"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_in_your_email_and_we_will_send_a_password_reset_email"
        android:textSize="14sp"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/send_email"
        android:id="@+id/button_sendEmail"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switchToLogin"
        android:text="@string/go_back_to_login"
        android:gravity="center"
        android:paddingTop="10dp"/>
</LinearLayout>