<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textColor="@color/teal_700"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:id="@+id/email"
            android:hint="@string/email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:id="@+id/password"
            android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_signup"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchToLogin"
        android:text="@string/log_in_instead"
        android:gravity="center"
        android:paddingTop="10dp"/>

</LinearLayout>